    effectively has no awareness of the content of the blob.
* got export to 2.0 fileformat working now too
* got import and export fully working, though it could bear some more testing just to be sure.
* added a 'DocFileFormat 2.0.odt' file under the extra/docs dir to explain how the new binary format is interpreted
2025-05-29 ------------------------------------------------------------------------------------------------------------
* renamed subdir 'dbExporters' to 'converters' as I will be moving the document conversion code (1.0 -> 1.1 -> 1.2)
    code into there as well, and out of the clientside
* moved all the validation and breakdown procedures to the server to facilitate commonality and to allow the db
    update procedures to manage all that on the backend.  (also helps in preventing clientside errors )
2025-05-27 ------------------------------------------------------------------------------------------------------------
* db conversion underway, 3->4 completed now, reworked table docTree so that parent is now an int reffing back to the 
    recs id instead of the recs uuid, also added 'bump' field
* 4->5 completed, moved the 'name' out of table:docTree and into table:doc, and updated all code to match.  (this change
    was purely serverside)
* made index pane contextMenu entry 'export document' now works, since as part of the phase of the next db upgrade 
    from 5->6 will change the export format as well, I wanted a quicker way to compare old vs new and having this
    exporter working /now/ will facilitate that.

* DocImporter is now v1.2 and uses 0x1E as the seperator instead of ';'
    and also inlcudes the docName now too.  We are gradually moving towards a mostly binary (uint8array) storage format
    and these are the first stages of that process
* added importers recognition of '\' as an escape of the next char, even though its now largely obsolete by using
    0x1E as the new seperator char
