@@ -45,21 +45,27 @@ class PacketBASE {
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // see bem_core_PacketHandlers.js for the CLASS.prototype.process(){} backend overrides for these classes
 
-//                <-- means server to client
-//                --> means client to server
+//                <-- means server to client (being replaced by B<--F)
+//                --> means client to server (being replaced by B-->F)
+// note that under the 'updated' packet structure, classes when defined have NO properties in them!  They must be added
+// during packet building
+//
+// if a property was sent during transmission, but is not relevant on the return trip, then it will be removed by the 
+// hander.  using GetExtra as an example, (only 'key' is set before sending, and is then deleted by the handler 
+// before returning,  and MAY add 'value' (only if 'key' existed) on returning)
 
 WS.registerPacketClass(class Fault extends PacketBASE { // if error thrown, it's sent back as a Fault
     msg;        // <-- "msg" indicating what the fault was
 });
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 WS.registerPacketClass(class GetBackendInfo extends PacketBASE { // get any element from extra table
-    //  version;    // B-->F current software version (since frontend ONLY loads FROM backend, version is always same!)
-    //  docVersion; // B-->F current highest docversion (that doesn't need a conversion)
-    });
+//  version;    // B-->F current software version (since frontend ONLY loads FROM backend, version is always same!)
+//  docVersion; // B-->F current highest docversion (that doesn't need a conversion)
+});
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 WS.registerPacketClass(class GetExtra extends PacketBASE { // get any element from extra table
-    txt;        // --> "key" on the way in
-                // <-- "value" on the way back
+//  key;        // B<-F "key" on the way in
+//  value;      // B->F "value" on the way back or undeclared if key not found
 });
 WS.registerPacketClass(class SetExtra extends PacketBASE { // get any element from extra table
     key;        // --> key to set/change
@@ -102,18 +108,11 @@ WS.registerPacketClass(class RenameDoc extends PacketBASE {  // Delete a documen
 WS.registerPacketClass(class DeleteDoc extends PacketBASE {   // Delete a document from the system
     uuid;       // -->  uuid of doc to get 
 });
-// WS.registerPacketClass(class ValidateDoc extends PacketBASE {  // explode and return (upgrade doc if less-than FG.VERSION) but NOT insert -> db!
-//     doc;        // F->B Uint8Array document raw from importDlg (!including @n.n header stuff!)
-//                 // F<-B deleted
-// //     dict;    // B->F dict containing dchList which is the doc broken down,
-// //                      uuid original uuid as extracted from the file
-// //                      exists ONLY if V2.0 or higher as names werent in 1.0 or 1.1 exports
-// });
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 WS.registerPacketClass(class CreateDB extends PacketBASE {  // Delete a document from the system
-    text;       // --> string name of db to create
-                // <-- error string if bad name or null if succeeded
+//  name;       // F->B string name of db to create
+//  error;      // B->F error string if bad name or null if succeeded
 });
 WS.registerPacketClass(class SelectDB extends PacketBASE {  // Delete a document from the system
     text;       // --> string name of db to select
